--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-asgiref = "==3.3.1"
+asgiref = ">=3.3.1"
 cobble = "==0.1.3"
 dj-database-url = "==0.5.0"
 django-heroku = "==0.3.1"
@@ -14,7 +14,7 @@ psycopg2 = "==2.8.6"
 pytz = "==2020.5"
 sqlparse = "==0.4.1"
 whitenoise = "==5.2.0"
-Django = "==3.1.5"
+Django = ">=3.1.8"
 
 [dev-packages]
 
